Set e3_building_config output to /dev/null
So the output is not read as a error when running a job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,23 +9,23 @@ build:
   stage: build
   image: registry.esss.lu.se/gabrielfedel/docker-e3:next
   script:
-    - yes | /root/e3/e3_building_config.bash -b 3.15.6 -r 3.1.0 setup
+    - yes | /root/e3/e3_building_config.bash -b 3.15.6 -r 3.1.0 setup > /dev/null
     - make vars
     - make init
     - make build
     - make install
-    - yes | /root/e3/e3_building_config.bash -b 3.15.6 -r 3.1.2 setup
+    - yes | /root/e3/e3_building_config.bash -b 3.15.6 -r 3.1.2 setup > /dev/null
     - make vars
     - make init
     - make build
     - make install
     - killall procServ
-    - yes | /root/e3/e3_building_config.bash -b 7.0.3 -r 3.1.0 setup
+    - yes | /root/e3/e3_building_config.bash -b 7.0.3 -r 3.1.0 setup > /dev/null
     - make vars
     - make init
     - make build
     - make install
-    - yes | /root/e3/e3_building_config.bash -b 7.0.3 -r 3.1.2 setup
+    - yes | /root/e3/e3_building_config.bash -b 7.0.3 -r 3.1.2 setup > /dev/null
     - make vars
     - make init
     - make build
@@ -39,7 +39,7 @@ test:
   before_script:
     - yum -y install psmisc
   script:
-    - yes | /root/e3/e3_building_config.bash -b 3.15.6 -r 3.1.0 setup
+    - yes | /root/e3/e3_building_config.bash -b 3.15.6 -r 3.1.0 setup > /dev/null
     - make vars
     - make init
     - make build
@@ -47,7 +47,7 @@ test:
     - procServ -P 2000 /epics/base-3.15.6/require/3.1.0/bin/iocsh.bash cmds/start.cmd
     - pytest --pref=TEST:A scaling/tests
     - killall procServ
-    - yes | /root/e3/e3_building_config.bash -b 3.15.6 -r 3.1.2 setup
+    - yes | /root/e3/e3_building_config.bash -b 3.15.6 -r 3.1.2 setup > /dev/null
     - make vars
     - make init
     - make build
@@ -55,7 +55,7 @@ test:
     - procServ -P 2000 /epics/base-3.15.6/require/3.1.2/bin/iocsh.bash cmds/start.cmd
     - pytest --pref=TEST:A scaling/tests
     - killall procServ
-    - yes | /root/e3/e3_building_config.bash -b 7.0.3 -r 3.1.0 setup
+    - yes | /root/e3/e3_building_config.bash -b 7.0.3 -r 3.1.0 setup > /dev/null
     - make vars
     - make init
     - make build
@@ -63,7 +63,7 @@ test:
     - procServ -P 2000 /epics/base-7.0.3/require/3.1.0/bin/iocsh.bash cmds/start.cmd
     - pytest --pref=TEST:A scaling/tests
     - killall procServ
-    - yes | /root/e3/e3_building_config.bash -b 7.0.3 -r 3.1.2 setup
+    - yes | /root/e3/e3_building_config.bash -b 7.0.3 -r 3.1.2 setup > /dev/null
     - make vars
     - make init
     - make build
