--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,23 +9,25 @@ build:
   stage: build
   image: registry.esss.lu.se/gabrielfedel/docker-e3:next
   script:
-    - yes | /root/e3/e3_building_config.bash -b 3.15.6 -r 3.1.0 setup > /dev/null
+    # base 3.15.6 req 3.1.0
     - make vars
     - make init
     - make build
     - make install
-    - yes | /root/e3/e3_building_config.bash -b 3.15.6 -r 3.1.2 setup > /dev/null
+    # base 3.15.6 req 3.1.2
+    - sed -i 's/3.1.0/3.1.2/g' configure/RELEASE
     - make vars
     - make init
     - make build
     - make install
-    - killall procServ
-    - yes | /root/e3/e3_building_config.bash -b 7.0.3 -r 3.1.0 setup > /dev/null
+    # base 7.0.3 req 3.1.2
+    - sed -i 's/base-3.15.6/base-7.0.3/g' configure/RELEASE
     - make vars
     - make init
     - make build
     - make install
-    - yes | /root/e3/e3_building_config.bash -b 7.0.3 -r 3.1.2 setup > /dev/null
+    # base 7.0.3 req 3.1.0
+    - sed -i 's/3.1.2/3.1.0/g' configure/RELEASE
     - make vars
     - make init
     - make build
@@ -39,7 +41,7 @@ test:
   before_script:
     - yum -y install psmisc
   script:
-    - yes | /root/e3/e3_building_config.bash -b 3.15.6 -r 3.1.0 setup > /dev/null
+    # base 3.15.6 req 3.1.0
     - make vars
     - make init
     - make build
@@ -47,7 +49,8 @@ test:
     - procServ -P 2000 /epics/base-3.15.6/require/3.1.0/bin/iocsh.bash cmds/start.cmd
     - pytest --pref=TEST:A scaling/tests
     - killall procServ
-    - yes | /root/e3/e3_building_config.bash -b 3.15.6 -r 3.1.2 setup > /dev/null
+    # base 3.15.6 req 3.1.2
+    - sed -i 's/3.1.0/3.1.2/g' configure/RELEASE
     - make vars
     - make init
     - make build
@@ -55,19 +58,21 @@ test:
     - procServ -P 2000 /epics/base-3.15.6/require/3.1.2/bin/iocsh.bash cmds/start.cmd
     - pytest --pref=TEST:A scaling/tests
     - killall procServ
-    - yes | /root/e3/e3_building_config.bash -b 7.0.3 -r 3.1.0 setup > /dev/null
-    - make vars
-    - make init
-    - make build
-    - make install
-    - procServ -P 2000 /epics/base-7.0.3/require/3.1.0/bin/iocsh.bash cmds/start.cmd
-    - pytest --pref=TEST:A scaling/tests
-    - killall procServ
-    - yes | /root/e3/e3_building_config.bash -b 7.0.3 -r 3.1.2 setup > /dev/null
+    # base 7.0.3 req 3.1.2
+    - sed -i 's/base-3.15.6/base-7.0.3/g' configure/RELEASE
     - make vars
     - make init
     - make build
     - make install
     - procServ -P 2000 /epics/base-7.0.3/require/3.1.2/bin/iocsh.bash cmds/start.cmd
+    - pytest --pref=TEST:A scaling/tests
+    - killall procServ
+    # base 7.0.3 req 3.1.0
+    - sed -i 's/3.1.2/3.1.0/g' configure/RELEASE
+    - make vars
+    - make init
+    - make build
+    - make install
+    - procServ -P 2000 /epics/base-7.0.3/require/3.1.0/bin/iocsh.bash cmds/start.cmd
     - pytest --pref=TEST:A scaling/tests
     - killall procServ
