--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,6 @@ build:
   stage: build
   image: centos:7
   script:
-    - mkdir /epics
-    - mount -t nfs 172.16.6.57:/e3 /epics
+    - mkdir ~/epics
+    - mount -t nfs 172.16.6.57:/e3 ~/epics
 
