--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,6 @@ build:
   stage: build
   image: centos:7
   script:
-    - mkdir ~/epics
-    - mount -t nfs 172.30.5.156:/e3 ~/epics
+    - mkdir /epics
+    - mount -t nfs 172.30.5.156:/e3 /epics
 
