test with gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,10 @@
 stages:
   - build
 build:
+  tags:
+    - cslab
   stage: build
   script:
     - mkdir /epics
     - mount -t nfs 172.30.5.156:/e3 /epics
+
