--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,6 @@ build:
     - cslab
   stage: build
   script:
-    - mkdir /epics
-    - mount -t nfs 172.30.5.156:/e3 /epics
+    - mkdir ~/epics
+    - mount -t nfs 172.30.5.156:/e3 ~/epics
 
